--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma migrate deploy && next build",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build",
+    "build": "next build",
+    "vercel-build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@next/third-parties": "^15.0.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -23,7 +22,6 @@
     "googleapis": "^144.0.0",
     "lucide-react": "^0.456.0",
     "next": "14.2.18",
-    "prisma": "^5.22.0",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
