--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@react-email/components": "^0.0.41",
+    "@react-email/render": "^1.1.2",
     "@sendgrid/mail": "^8.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -26,7 +28,8 @@
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
-    "resend": "^4.1.2",
+    "react-email": "^4.0.15",
+    "resend": "^4.5.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
